2016-12-23 gyunaev <gyunaev@ulduzsoft.com>
  - Made "test lyrics" button reload lyrics without restarting the song (thx Dario Abatianni)

2015-12-13 gyunaev <gyunaev@ulduzsoft.com>
  - Released version 2.0
  - Added option to enable or disable font anti-aliasing for CD+G export
  - Added option to switch back to default background (use { DEFAULT } ), and to set background to a specific color
  - Added Qt5 support
  
2014-01-09 gyunaev <gyunaev@ulduzsoft.com>
  - Released version 1.11
  - Webm video export fixed

2013-12-20 gyunaev <gyunaev@ulduzsoft.com>
  - Released version 1.10
  - Video export offers more options now
  
2013-11-10 gyunaev <gyunaev@ulduzsoft.com>
  - Released version 1.9
  - Fixed jittering sound output when a newer version of ffmped is installed;
  - Fixed reversed Artist and Title fields in the CD+G export dialog;
  - Fixed the registration dialog which didn't pop up;
  - Fixed the "missing LRC header" error while importing KFN lyrics via "Import lyrics" menu
  - When a new project is created the editor now will try to read the meta tags and fill up the Artist, Title and Album automatically.


2013-10-05 gyunaev <gyunaev@ulduzsoft.com>
  - Released version 1.8
  - Fixed the registration dialog entry lockup with recent Qt versions

2013-08-08 gyunaev <gyunaev@ulduzsoft.com>
  - Released version 1.7
  - Fixed the CD+G output which now uses two color gradations. The output looks better, and the "Color table out of colors" error is gone forever.

2013-05-30 gyunaev <gyunaev@ulduzsoft.com>
  - Released version 1.6
  - Added support for importing Doblon PowerKaraoke lyrics and Del MP3 KOK lyrics; 
  - Fixed "Test CD+G" option sometime showing a black screen; 
  - Fixed KFN parsing and Ultrastar output; 
  - Fixed compilation on x86_64

2012-12-22 gyunaev <gyunaev@ulduzsoft.com>
  - Released version 1.4